Updating README and .env-example

--- a/config/.env-example
+++ b/config/.env-example
@@ -1,6 +1,6 @@
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
-POSTGRES_HOST=
-POSTGRES_PORT=
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 DEBUG_DJANGO=
